SCM Software Complete locally

--- a/scm/src/main/resources/templates/base.html
+++ b/scm/src/main/resources/templates/base.html
@@ -10,11 +10,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title data-th-replace="${title}">SCM</title>
 
+    <link rel="stylesheet" data-th-href="@{'/css/output.css'}" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" data-th-href="@{'/css/output.css'}" />
     <link rel="stylesheet" data-th-href="@{'/css/style.css'}" />
 
     <!-- font awesome -->
@@ -28,7 +28,16 @@
   </head>
   <body class="dark:bg-gray-900 bg-gray-100 dark:text-white">
     <!-- commona header -->
-    <div data-th-replace="navbar :: navbar"></div>
+
+    <!--  user is logged in : navbar -->
+    <div th:if="${loggedInUser}">
+      <div data-th-replace="~{user/user_navbar::user-navbar}"></div>
+    </div>
+
+    <!-- user is not logged : navbar -->
+    <div th:unless="${loggedInUser}">
+      <div data-th-replace="~{navbar :: navbar}"></div>
+    </div>
 
     <!-- main content -->
     <div class="p-4">
