--- a/scm/src/main/resources/templates/register.html
+++ b/scm/src/main/resources/templates/register.html
@@ -8,13 +8,12 @@
   </head>
   <body>
     <div id="content">
-      <div class="grid grid-cols-12 mt-4">
-        <div class="col-span-4 md:col-span-2 lg:col-span-3 xl:col-span-4"></div>
-        <div class="col-span-12 md:col-span-8 lg:col-span-6 xl:col-span-4">
+      <div class="flex justify-center items-center mt-4">
+        <div class="w-[40%]">
           <!-- 6 ki spance le rhi hai -->
           <!-- card -->
           <div
-            class="block p-6 border-t-[10px] border-blue-700 bg-white rounded-xl shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-blue-700 dark:hover:bg-gray-700"
+            class="block p-6 border-t-[10px] border-blue-700 bg-white rounded-xl shadow dark:bg-gray-800 dark:border-blue-700"
           >
             <!-- message here -->
 
@@ -157,7 +156,7 @@
                 </button>
                 <button
                   type="reset"
-                  class="px-3 py-2 rounded bg-orange-800 hover:bg-orange text-white dark:bg-orange-800 dark:hover:bg-orange-800"
+                  class="px-3 py-2 rounded bg-red-600 hover:bg-red-500 text-white dark:bg-orange-800 dark:hover:bg-orange-800"
                 >
                   Reset
                 </button>
